--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,6 +6,8 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+	<link rel="stylesheet" href="/stylesheets/react-big-calendar.css"></link>
 </head>
 <body>
 	 <div id="app"></div>
